--- a/esp32-example-chinese.yaml
+++ b/esp32-example-chinese.yaml
@@ -11,7 +11,7 @@ esphome:
   comment: ${device_description}
   min_version: 2024.6.0
   project:
-    name: "Depressboy.esphome-yuhui-mppt"
+    name: "Depressboy.esphome-pipsolar-techfine"
     version: 1.0.1
 
 esp32:
